prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/expected_expression.diag.txt
ERROR: expected 'expression'
testData/diagnostics/compilation_errors/syntax_errors/expected_expression.nut:2:8

// EXPECT_ERROR: "expected 'expression'"
let x =
        ^


